# Compact-DNA-Data-Structures

./: CMakeLists.txt  README.md  exec_routine.sh  mfe
bml-bloom-kmer/code/: .clang-format  .clangd  Makefile  README.md  TODO.md  bitvector.c  bloom_filter.c  build_kmer_filter.c  compare-mems.py  file_utils.c  kmer_filter.c  kmer_filter.h  kmer_mem_finder.c  kmer_substrings.c  memFinder.c  move_mem_finder.c  move_table.c  output.txt  run.py  sort_substrings.py  ssvector.c  string_utils.c  substring_builder.c  test_bitvector.c  test_bloom_filter.c
bml-bloom-kmer/code/data/: bloom.bml  dataset.blm  pattern.txt  single_pattern.txt  substrings.txt
bml-bloom-kmer/code/include/: bloom_filter.h  kmer_filter.h  kmer_mems.h  move_table.h  string_utils.h
bml-bloom-kmer/code/plot/: data.csv  data_generator.py  execution_data.csv  fast_execute.sh  input_data_generator.py  plot.py  process_data.py  run_instances.py  single_plot.py
bml-bloom-kmer/code/plot/data/: input_data.csv  output_data.csv
bml-bloom-kmer/code/plot/tmp/: dataset_test.blm  output_test.txt  substring_test.txt
bml-bloom-kmer/travis/: Makefile  buildFilter.c  dataset.blm  dataset.mvt  memFinder_better.c  memFinder_new.c  output.txt  patterns.txt  saved.txt
datasets/: README.md
fm-index-mem-finder/: Makefile  create_bwt.c  fm_index.c  mem_finder.c
fm-index-mem-finder/data/: DNA_BWT_REV.txt  pattern.txt  test.txt  test_bwt_for.txt  test_bwt_rev.txt
fm-index-mem-finder/test/: pattern.txt
move-table-mem-finder/: Makefile  fm_index.h  mem.c  mem_finder_experimental.c  mem_finder_mvt.c  mfe  output.txt  simple_BWT.c  tesatad.mvt  travis_move_demo.c
move-table-mem-finder/data/: DNA_BWT_FOR.txt  DNA_BWT_REV.txt
move_structure/: build  invert
move_structure/data/: dataset.txt.LF_move
move_structure/include/: LF_move.hpp
move_structure/src/: build.cpp  invert.cpp  mem.cpp
rlfm-mem-finder/cds-a5/: .gitignore  CMakeLists.txt
rlfm-mem-finder/cds-a5/src/: .clangd  build.cpp  deserialize.cpp  how-to-mem-find.md  invert.cpp  invert_movelet.cpp  mem_finder.cpp  rlfm.cpp  rlfm.h
scripts/plot_kebab/: plot.py
scripts/plot_kebab/data/: input_data.csv  output_data.csv
src/bwt/: .clangd  CMakeLists.txt  bwt_generator.c
src/file-utils/: .clangd  CMakeLists.txt  file_utils.h
src/fm-index/: CMakeLists.txt  mem_finder.c
src/kebab/: .clangd  CMakeLists.txt  __kmer_mem_finder.c  bitvector.h  bloom_filter.c  bloom_filter.h  build_kmer_filter.c  kmer_filter.c  kmer_substrings.c
src/move-table/: .clangd  CMakeLists.txt  make_table.c  make_table_rev.c  move_mem_finder.c
src/rlfm/: CMakeLists.txt  build.cpp  invert.cpp  invert_movelet.cpp  load.cpp  mem_finder.cpp  rlfm.cpp  rlfm.h
src/ssvector/: CMakeLists.txt  ssvector.h
src/string-utils/: CMakeLists.txt  string_utils.c
suchi-move-table/: Makefile  TODO.md  temp_output.txt
suchi-move-table/data/: data.txt  data.txt.bwt  data.txt.rev.bwt  dataset1.mvt  single_pattern2.txt  tesatad1.mvt
suchi-move-table/include/: bwt.h  fm_index.h  move_table.h  sort_r.h
suchi-move-table/output/: output2.txt  output_fm.txt
suchi-move-table/src/: bwt.c  fm_index.c  fm_mem_finder.c  move_find_occurences.c  move_generator.c  move_mem_finder.c  move_table.c
